--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,60 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
+* {
+  padding: 0;
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-size: 1rem;
+  font-family: 'Lato', sans-serif;
+}
+
+.calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 50px;
+  width: 350px;
+}
+
+.btn {
+  border: 1px solid #bababa;
+  cursor: pointer;
+}
+
+.btn:hover {
+  border: 1px solid #818080;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.output {
+  grid-column: 1/5;
+  display: grid;
+  align-items: center;
+  justify-content: end;
+  padding-right: 1rem;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.zero {
+  grid-column: 1/3;
+}
+
+.operators {
+  background-color: #f5913e;
+}
+
+.light-gray {
+  background-color: #e0e0e0;
+}
+
+.dark-gray {
+  background-color: #858694;
 }
