--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,8 @@ body {
 .combined {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 60%;
   margin: 30px auto;
-  font-size: 25px;
 }
 
 .digits {
@@ -48,7 +47,7 @@ body {
 button {
   text-align: center;
   border: none;
-  padding: 30px;
+  padding: 10px;
   background: rgb(194, 194, 194);
 }
 
@@ -63,47 +62,7 @@ button {
 
 .displayed-quote {
   font-style: italic;
-  width: 70%;
+  width: 60%;
+  margin: 30px auto;
   text-align: center;
-  margin: 30% auto;
-}
-
-.main-nav {
-  display: flex;
-  justify-content: space-between;
-  margin-right: 5%;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  font-size: 19px;
-  padding: 25px;
-  align-items: center;
-}
-
-nav a {
-  padding: 5px;
-  text-decoration: none;
-  color: black;
-  margin-right: 5%;
-}
-
-nav a.active {
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.home-text {
-  text-align: center;
-  padding: 13%;
-  letter-spacing: 0.03em;
-  line-height: 30px;
-  font-weight: 500;
-  font-size: 20px;
-}
-
-.let-us {
-  padding-bottom: 10px;
-  font-size: 18px;
 }
